--- a/ec2-to-s3.cf.yml
+++ b/ec2-to-s3.cf.yml
@@ -31,6 +31,7 @@ Resources:
   Subnet:
     Type: 'AWS::EC2::Subnet'
     Properties:
+      AvailabilityZone: ap-northeast-1a
       CidrBlock: 10.0.0.0/24
       VpcId: !Ref VPC
   InternetGateway:
